fix: added trads and disk size value
DATATR-65

Signed-off-by: Alexandre Claveau <alexandre.claveau@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/command/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/command/translations/Messages_fr_FR.json
@@ -10,6 +10,7 @@
   "pci_databases_add_command_parameters_info_description": "Nom de votre service",
   "pci_databases_add_command_parameters_info_networkId": "Réseau privé openstack id",
   "pci_databases_add_command_parameters_info_subnetId": "Sous-réseau id",
+  "pci_databases_add_command_parameters_info_disk_size": "Capacité de stockage",
   "pci_databases_add_command_parameters_info_nodesPattern_flavor": "Caractéristiques sélectionnées",
   "pci_databases_add_command_parameters_info_nodesPattern_number": "Nombre de nœuds",
   "pci_databases_add_command_parameters_info_nodesPattern_region": "Localisation sélectionnée",
@@ -21,6 +22,7 @@
   "pci_databases_add_command_parameters_info_terraform_version": "Version de la base de données",
   "pci_databases_add_command_parameters_info_terraform_plan": "Offre sélectionnée",
   "pci_databases_add_command_parameters_info_terraform_flavor": "Caractéristiques sélectionnées",
+  "pci_databases_add_command_parameters_info_terraform_disk_size": "Capacité de stockage",
   "pci_databases_add_command_parameters_info_terraform_nodes": "Liste de noeuds",
   "pci_databases_add_command_parameters_info_terraform_nodes_region": "Localisation sélectionnée",
   "pci_databases_add_command_parameters_info_terraform_nodes_network_id": "Réseau privé openstack id",
