--- a/packages/manager/modules/sms/src/sms/components/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/sms/src/sms/components/translations/Messages_fr_FR.json
@@ -10,12 +10,16 @@
   "sms_component_smppSettings_description_flow_rate_allowed": "{{ value }} messages/seconde",
   "sms_component_serviceStatus_title": "État des services",
   "sms_component_serviceStatus_label_status": "Statut",
-  "sms_component_serviceStatus_status_OK": "Ok",
-  "sms_component_serviceStatus_status_ERROR": "En erreur",
-  "sms_component_serviceStatus_status_INSTALLING": "En cours d'installation",
-  "sms_component_serviceStatus_status_UPDATING_IPS": "Autorisation IP en cours de mise à jour",
-  "sms_component_serviceStatus_status_enable": "Actif",
-  "sms_component_serviceStatus_status_disable": "Inactif",
+  "sms_component_serviceStatus_status_DELETED": "Supprimé",
+  "sms_component_serviceStatus_status_ERROR": "Erreur",
+  "sms_component_serviceStatus_status_ERROR_tooltip": "Une erreur a été détectée, veuillez réessayer d’ici quelques instants.",
+  "sms_component_serviceStatus_status_SUCCESS": "OK",
+  "sms_component_serviceStatus_status_UNKNOWN": "Erreur inconnue",
+  "sms_component_serviceStatus_status_UNKNOWN_tooltip": "Veuillez contacter le support.",
+  "sms_component_serviceStatus_status_UPDATING_IP": "En cours de mise à jour",
+  "sms_component_serviceStatus_status_UPDATING_IP_tooltip": "Le service ne sera opérationnel que lorsque l’IP sera autorisée.",
+  "sms_component_serviceStatus_status_WAITING_IP": "En attente de la déclaration de vos IPs",
+  "sms_component_serviceStatus_status_WAITING_IP_tooltip": "Le service ne sera opérationnel que lorsque vos IPs auront été déclarées.",
   "sms_component_serviceStatus_button_reset_password": "Générer un nouveau mot de passe",
   "sms_component_serviceStatus_password_modal_title": "Générer un nouveau mot de passe",
   "sms_component_serviceStatus_password_modal_button_primary": "Envoyer",
