--- a/packages/manager/modules/pci/src/projects/project/storages/containers/add/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/add/translations/Messages_de_DE.json
@@ -31,6 +31,6 @@
   "pci_projects_project_storages_containers_add_offer_storage-s3-high-perf_label": "Neu",
   "pci_projects_project_storages_containers_add_create_or_linked_user_title": "Nutzer zuweisen",
   "pci_projects_project_storages_containers_add_create_or_linked_user_success_field_secret_key": "Ihr geheimer S3-Schlüssel:",
-  "pci_projects_project_storages_containers_add_create_or_linked_user_description": "Sie können einem vordefinierten Nutzer Zugriff auf Ihren Container gewähren oder einen neuen Nutzer erstellen.",
+  "pci_projects_project_storages_containers_add_create_or_linked_user_description": "Einem vorkonfigurierten Nutzer von OpenStack können Sie den Zugang zu einem Container einrichten, indem Sie ihm die Rolle eines Administrators oder Object Storage Operators zuweisen. Außerdem können Sie einen neuen Nutzer erstellen.",
   "pci_projects_project_storages_containers_add_success_message_with_user_creation": "Der Container {{container}} wurde erfolgreich erstellt. Der S3-Nutzer {{ userName }} ist Administrator dieses Containers."
 }
