--- a/packages/manager/modules/pci/src/projects/project/storages/containers/add/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/add/translations/Messages_es_ES.json
@@ -31,6 +31,6 @@
   "pci_projects_project_storages_containers_add_offer_storage-s3-high-perf_label": "Novedad",
   "pci_projects_project_storages_containers_add_create_or_linked_user_title": "Asociar un usuario",
   "pci_projects_project_storages_containers_add_create_or_linked_user_success_field_secret_key": "Su clave secreta S3:",
-  "pci_projects_project_storages_containers_add_create_or_linked_user_description": "Puede dar acceso a su contenedor a un usuario predefinido o crear un nuevo usuario.",
+  "pci_projects_project_storages_containers_add_create_or_linked_user_description": "Puede dar acceso al contenedor a uno de sus usuarios OpenStack preconfigurados con un rol de «Administrador» o de «Operador Object Storage», o bien crear un nuevo usuario.",
   "pci_projects_project_storages_containers_add_success_message_with_user_creation": "El contenedor {{container}} se ha creado correctamente. El usuario S3 {{ userName }} es el administrador de este contenedor."
 }
