--- a/packages/manager/modules/pci/src/projects/project/storages/containers/add/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/add/translations/Messages_it_IT.json
@@ -31,6 +31,6 @@
   "pci_projects_project_storages_containers_add_offer_storage-s3-high-perf_label": "Nuovo",
   "pci_projects_project_storages_containers_add_create_or_linked_user_title": "Associare un utente",
   "pci_projects_project_storages_containers_add_create_or_linked_user_success_field_secret_key": "La tua chiave segreta S3:",
-  "pci_projects_project_storages_containers_add_create_or_linked_user_description": "È possibile autorizzare l’accesso al container a un utente predefinito oppure creare un nuovo utente.",
+  "pci_projects_project_storages_containers_add_create_or_linked_user_description": "È possibile consentire l'accesso al container a uno degli utenti OpenStack preconfigurati con un ruolo \"Amministratore\" o \"Operatore Object Storage\" oppure creare un nuovo utente.",
   "pci_projects_project_storages_containers_add_success_message_with_user_creation": "Il container {{container}} è stato creato correttamente. L'utente S3 {{ userName }} è l'amministratore di questo container."
 }
