--- a/packages/manager/modules/pci/src/projects/project/storages/containers/add/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/add/translations/Messages_pt_PT.json
@@ -31,6 +31,6 @@
   "pci_projects_project_storages_containers_add_offer_storage-s3-high-perf_label": "Novo",
   "pci_projects_project_storages_containers_add_create_or_linked_user_title": "Associar um utilizador",
   "pci_projects_project_storages_containers_add_create_or_linked_user_success_field_secret_key": "A sua chave secreta S3:",
-  "pci_projects_project_storages_containers_add_create_or_linked_user_description": "Tem a possibilidade de dar acesso ao seu container a um utilizador predefinido ou de criar um novo utilizador.",
+  "pci_projects_project_storages_containers_add_create_or_linked_user_description": "Pode dar acesso ao container a um dos seus utilizadores OpenStack pré-configurados com um papel «Administrador» ou «Operador Object Storage», ou então criar um novo utilizador.",
   "pci_projects_project_storages_containers_add_success_message_with_user_creation": "O container {{container}} foi criado com êxito. O utilizador S3 {{ userName }} é o administrador deste container."
 }
