--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_fr_FR.json
@@ -35,5 +35,5 @@
   "pci_app_add_resources_total": "Prix total du déploiement",
   "pci_app_add_resources_resource_price": "Prix resource",
   "pci_app_add_resources_partner_price": "Prix licence",
-  "pci_app_add_resources_free_during_beta": "Gratuit pendant la beta"
+  "pci_app_add_resources_free_during_beta": "Gratuit pendant la bêta"
 }
