--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_fr_FR.json
@@ -1,5 +1,6 @@
 {
   "dedicatedCloud_datacenters_title": "Datacentres",
+  "dedicatedCloud_datacenters_commercialRange": "Gamme",
   "dedicatedCloud_datacenters_add": "Ajout d'un datacentre",
   "dedicatedCloud_datacenters_cpu": "Total CPU",
   "dedicatedCloud_datacenters_ram": "Total RAM",
