--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/notebook-sizing/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/notebook-sizing/translations/Messages_fr_FR.json
@@ -4,7 +4,7 @@
   "data_processing_add_notebook_cluster_sizing_description": "Le dimensionnement du cluster est proposé ici à <strong>titre indicatif</strong> et ne sera définitif qu'à la sélection du kernel depuis JupyterLab.",
   "data_processing_add_notebook_price_unit": "min",
   "data_processing_add_notebook_template_notebook_cpu": "CPU : {{nbCpu}} vCore",
-  "data_processing_add_notebook_template_notebook_ram": "RAM : {{nbGio}} Gio",
+  "data_processing_add_notebook_template_notebook_ram": "Memory : {{nbGio}} Gio",
   "data_processing_add_notebook_template_driver_cpu": "Driver CPU : {{nbCpu}} vCore",
   "data_processing_add_notebook_template_driver_ram": "Driver memory : {{nbGio}} Gio",
   "data_processing_add_notebook_template_driver_ram_overhead": "Driver memory overhead : {{nbGio}} Gio",
