--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/translations/Messages_fr_FR.json
@@ -2,7 +2,7 @@
   "data_processing_add_notebook_title": "Créer un notebook",
   "data_processing_add_notebook_description": "Démarrez vos notebooks Jupyter dans le cloud et lancez des jobs Apache Spark à la demande depuis ceux-ci.",
   "data_processing_add_notebook_description_warning_ai": "Vous cherchez plutôt à explorer vos données via un notebook permettant d'exploiter les plus grands frameworks d'intelligence artificielle (Tensorflow, PyTorch, Hugging Face ou encore Scikit-learn).",
-  "data_processing_add_notebook_description_warning_ai_link": "Essayez les AI Notebooks",
+  "data_processing_add_notebook_description_warning_ai_link": "Essayez les AI Notebooks.",
   "data_processing_add_notebook_stepper_region_title": "Sélectionner une région",
   "data_processing_add_notebook_stepper_notebook_type_title": "Sélectionner un framework",
   "data_processing_add_notebook_stepper_sizing_title": "Dimensionnement du job",
@@ -18,7 +18,7 @@
   "data_processing_add_notebook_error_label": "Une erreur est survenue, nous ne pouvons pas démarrer votre job pour le moment.",
   "data_processing_add_notebook_spec_heading": "Votre notebook",
   "data_processing_add_notebook_spec_name": "Nom : ",
-  "data_processing_add_notebook_spec_engine": "Type : ",
+  "data_processing_add_notebook_spec_engine": "Framework : ",
   "data_processing_add_notebook_spec_engine_version": "Version {{version}}",
   "data_processing_add_notebook_spec_region": "Région : ",
   "data_processing_add_notebook_spec_sizing": "Dimensionnement : ",
@@ -40,5 +40,7 @@
   "data_processing_add_notebookect_storage_link": "Cliquez ici pour en ajouter un.",
   "data_processing_add_notebook_api_equivalent": "API",
   "data_processing_add_notebook_spec_config_ttl": "TTL : ",
-  "data_processing_add_notebook_stepper_add_notebook_button": "Créer votre notebook"
+  "data_processing_add_notebook_stepper_add_notebook_button": "Créer votre notebook",
+  "data_processing_add_notebook_spec_privacy_public": "Accès public",
+  "data_processing_add_notebook_spec_privacy_private": "Accès restreint"
 }
