--- a/packages/manager/modules/pci/src/projects/project/data-processing/onboarding/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/onboarding/translations/Messages_fr_FR.json
@@ -5,7 +5,7 @@
   "data_processing_onboarding_action_label": "Démarrer mon premier job",
   "data_processing_onboarding_guides_overview_title": "Présentation de Data Processing",
   "data_processing_onboarding_guides_quick_start_title": "Lancer mon premier job Spark",
-  "data_processing_onboarding_guides_quick_start_notebook_title": "Lancer mon premier notebook pour Apache Spark",
+  "data_processing_onboarding_guides_quick_start_notebook_title": "Lancer mon premier notebook pour Apache Spark™",
   "data_processing_onboarding_guides_monitor_job_title": "Monitorer mes jobs",
   "data_processing_onboarding_activation": "Activation en cours...",
   "data_processing_onboarding_spark_trademark": ", Spark, Apache, le logo Apache, et le logo du projet Apache Spark sont des marques appartenant à la Apache Software Foundation."
