--- a/packages/manager/modules/pci/src/projects/project/data-processing/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/translations/Messages_fr_FR.json
@@ -2,6 +2,6 @@
   "data_processing_title": "Data Processing",
   "data_processing_home_title": "Accueil",
   "data_processing_jobs_title": "Jobs",
-  "data_processing_notebooks_title": "Notebooks for Apache Spark",
+  "data_processing_notebooks_title": "Notebooks for Apache Spark&trade;",
   "data_processing_notebooks_alpha": "Alpha"
 }
