fix: remove unused translations [CDS]
Signed-off-by: CDS <cds@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_de_DE.json
@@ -4,15 +4,18 @@
   "signup_not_mandatory_field": "(optional)",
   "signup_email_in_use": "Für diese E-Mail existiert bereits ein OVHcloud Kundenkonto.",
   "signup_password_invalid": "muss mindestens eine Zahl sowie einen Groß- und einen Kleinbuchstaben enthalten; muss mindestens 8 Zeichen lang sein.",
-  "signup_section_account": "Ihr Account",
+  "signup_section_identification": "Ihre Kundenkennung",
+  "signup_section_activity": "Ihr Beruf / Ihre Branche",
   "signup_section_personal": "Ihre Angaben zur Person",
   "signup_section_contact": "Ihre Kontaktdaten",
+  "signup_section_language": "Konfiguration Ihres Kundencenters",
   "signup_section_other": "Zusätzliche Informationen",
   "signup_field_date_placeholder": "tt/mm/jjjj",
   "signup_field_date_calendar": "Datum auswählen",
   "signup_field_legalform": "Account-Typ",
   "signup_field_country": "Land",
   "signup_field_language": "Sprache",
+  "signup_field_managerLanguage": "Sprache des Kundencenters",
   "signup_field_firstname": "Vorname",
   "signup_field_name": "Name",
   "signup_field_email": "E-Mail",
@@ -23,6 +26,7 @@
   "signup_field_companyNationalIdentificationNumber": "Steuer-IdNr. des Unternehmens",
   "signup_field_sex": "Geschlecht",
   "signup_field_vat": "USt-IdNr.",
+  "signup_field_gst": "Nummer der Steuer auf Waren und Dienstleistungen (GST)",
   "signup_field_address": "Adresse",
   "signup_field_area": "Region",
   "signup_field_state": "Status",
@@ -39,6 +43,8 @@
   "signup_field_timezone": "Zeitzone",
   "signup_field_customerCode": "Kundencode",
   "signup_field_italianSDI": "SDI-Nummer",
+  "signup_field_required_error": "Bitte füllen Sie dieses Feld aus.",
+  "signup_field_pattern_error": "Bitte wählen Sie ein gültiges Format.",
   "signup_enum_legalform_association": "Verein",
   "signup_enum_legalform_corporation": "Unternehmen",
   "signup_enum_legalform_personalcorporation": "Einzelunternehmen",
@@ -77,6 +83,14 @@
   "signup_enum_language_lt_LT": "Litauisch",
   "signup_enum_language_nl_NL": "Niederländisch",
   "signup_enum_language_pt_PT": "Portugiesisch",
+  "signup_enum_managerLanguage_de_DE": "Deutsch",
+  "signup_enum_managerLanguage_en_GB": "Englisch",
+  "signup_enum_managerLanguage_es_ES": "Spanisch",
+  "signup_enum_managerLanguage_fr_FR": "Französisch",
+  "signup_enum_managerLanguage_fr_CA": "Französisch (Kanada)",
+  "signup_enum_managerLanguage_pl_PL": "Polnisch",
+  "signup_enum_managerLanguage_it_IT": "Italienisch",
+  "signup_enum_managerLanguage_pt_PT": "Portugiesisch",
   "signup_enum_ovhSubsidiary_ASIA": "Asien",
   "signup_enum_ovhSubsidiary_AU": "Australien",
   "signup_enum_ovhSubsidiary_CA": "Kanada",
@@ -709,8 +723,6 @@
   "signup_enum_IT_area_BT": "Barletta-Andria-Trani (Apulien)",
   "signup_enum_IT_area_FM": "Fermo (Marken)",
   "signup_enum_IT_area_MB": "Monza E Brianza (Lombardei)",
-  "signup_field_managerLanguage": "Sprache des Kundencenters",
-  "signup_field_gst": "Nummer der Steuer auf Waren und Dienstleistungen (GST)",
   "signup_enum_IN_area_IN-AN": "Andamanen und Nikobaren",
   "signup_enum_IN_area_IN-AP": "Andhra Pradesh",
   "signup_enum_IN_area_IN-AR": "Arunachal Pradesh",
@@ -746,18 +758,5 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "Westbengalen",
-  "signup_section_identification": "Ihre Kundenkennung",
-  "signup_section_activity": "Ihr Beruf / Ihre Branche",
-  "signup_section_language": "Konfiguration Ihres Kundencenters",
-  "signup_field_required_error": "Bitte füllen Sie dieses Feld aus.",
-  "signup_field_pattern_error": "Bitte wählen Sie ein gültiges Format.",
-  "signup_enum_managerLanguage_de_DE": "Deutsch",
-  "signup_enum_managerLanguage_en_GB": "Englisch",
-  "signup_enum_managerLanguage_es_ES": "Spanisch",
-  "signup_enum_managerLanguage_fr_FR": "Französisch",
-  "signup_enum_managerLanguage_fr_CA": "Französisch (Kanada)",
-  "signup_enum_managerLanguage_pl_PL": "Polnisch",
-  "signup_enum_managerLanguage_it_IT": "Italienisch",
-  "signup_enum_managerLanguage_pt_PT": "Portugiesisch"
+  "signup_enum_IN_area_IN-WB": "Westbengalen"
 }
