--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_it_IT.json
@@ -4,15 +4,18 @@
   "signup_not_mandatory_field": "(facoltativo)",
   "signup_email_in_use": "Per questa email esiste già un account cliente OVHcloud.",
   "signup_password_invalid": "Deve contenere almeno una cifra, una lettera maiuscola e una minuscola ed essere costituita da 8 o più caratteri.",
-  "signup_section_account": "Il tuo account",
+  "signup_section_identification": "Il tuo identificativo cliente",
+  "signup_section_activity": "La tua attività",
   "signup_section_personal": "I tuoi dati personali",
   "signup_section_contact": "Le tue informazioni di contatto",
+  "signup_section_language": "Configurazione del tuo Spazio Cliente",
   "signup_section_other": "Ulteriori informazioni",
   "signup_field_date_placeholder": "gg/mm/aaaa",
   "signup_field_date_calendar": "Scegli la data",
   "signup_field_legalform": "Tipo di account",
   "signup_field_country": "Paese",
   "signup_field_language": "Lingua",
+  "signup_field_managerLanguage": "Lingua dello Spazio Cliente",
   "signup_field_firstname": "Nome",
   "signup_field_name": "Nome",
   "signup_field_email": "Email",
@@ -23,6 +26,7 @@
   "signup_field_companyNationalIdentificationNumber": "Codice fiscale organizzazione",
   "signup_field_sex": "Sesso",
   "signup_field_vat": "Partita IVA comunitaria",
+  "signup_field_gst": "Numero di imposta su beni e servizi (GST) ",
   "signup_field_address": "Indirizzo",
   "signup_field_area": "Region",
   "signup_field_state": "Stato",
@@ -39,6 +43,8 @@
   "signup_field_timezone": "Fuso orario:",
   "signup_field_customerCode": "Codice cliente",
   "signup_field_italianSDI": "SDI (per fatturazione elettronica)",
+  "signup_field_required_error": "Completa questo campo",
+  "signup_field_pattern_error": "Inserisci un formato valido",
   "signup_enum_legalform_association": "Associazione",
   "signup_enum_legalform_corporation": "Società",
   "signup_enum_legalform_personalcorporation": "Ditta individuale",
@@ -77,6 +83,14 @@
   "signup_enum_language_lt_LT": "Lituano",
   "signup_enum_language_nl_NL": "Olandese",
   "signup_enum_language_pt_PT": "Portoghese",
+  "signup_enum_managerLanguage_de_DE": "Tedesco",
+  "signup_enum_managerLanguage_en_GB": "Inglese",
+  "signup_enum_managerLanguage_es_ES": "Spagnolo",
+  "signup_enum_managerLanguage_fr_FR": "Francese",
+  "signup_enum_managerLanguage_fr_CA": "Francese (Canada)",
+  "signup_enum_managerLanguage_pl_PL": "Polacco",
+  "signup_enum_managerLanguage_it_IT": "Italiano",
+  "signup_enum_managerLanguage_pt_PT": "Portoghese",
   "signup_enum_ovhSubsidiary_ASIA": "Asia",
   "signup_enum_ovhSubsidiary_AU": "Australia",
   "signup_enum_ovhSubsidiary_CA": "Canada",
@@ -709,8 +723,6 @@
   "signup_enum_IT_area_BT": "Barletta-Andria-Trani (Puglia)",
   "signup_enum_IT_area_FM": "Fermo (Marche)",
   "signup_enum_IT_area_MB": "Monza e Brianza (Lombardia)",
-  "signup_field_managerLanguage": "Lingua dello Spazio Cliente",
-  "signup_field_gst": "Numero di imposta su beni e servizi (GST) ",
   "signup_enum_IN_area_IN-AN": "Andamane e Nicobare",
   "signup_enum_IN_area_IN-AP": "Andhra Pradesh",
   "signup_enum_IN_area_IN-AR": "Arunachal Pradesh",
@@ -746,18 +758,5 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "Bengala Occidentale",
-  "signup_section_identification": "Il tuo identificativo cliente",
-  "signup_section_activity": "La tua attività",
-  "signup_section_language": "Configurazione del tuo Spazio Cliente",
-  "signup_field_required_error": "Completa questo campo",
-  "signup_field_pattern_error": "Inserisci un formato valido",
-  "signup_enum_managerLanguage_de_DE": "Tedesco",
-  "signup_enum_managerLanguage_en_GB": "Inglese",
-  "signup_enum_managerLanguage_es_ES": "Spagnolo",
-  "signup_enum_managerLanguage_fr_FR": "Francese",
-  "signup_enum_managerLanguage_fr_CA": "Francese (Canada)",
-  "signup_enum_managerLanguage_pl_PL": "Polacco",
-  "signup_enum_managerLanguage_it_IT": "Italiano",
-  "signup_enum_managerLanguage_pt_PT": "Portoghese"
+  "signup_enum_IN_area_IN-WB": "Bengala Occidentale"
 }
