--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pl_PL.json
@@ -4,15 +4,18 @@
   "signup_not_mandatory_field": "(opcjonalnie)",
   "signup_email_in_use": "Ten adres e-mail jest już przypisany do konta klienta w OVHcloud.",
   "signup_password_invalid": "Musi zawierać przynajmniej jedną cyfrę, jedną wielką literę, jedną małą literę. Musi składać się z co najmniej 8 znaków.",
-  "signup_section_account": "Twoje konto",
+  "signup_section_identification": "Twój identyfikator klienta",
+  "signup_section_activity": "Twoja działalność",
   "signup_section_personal": "Imię i nazwisko",
   "signup_section_contact": "Twoje dane kontaktowe",
+  "signup_section_language": "Konfiguracja Panelu klienta",
   "signup_section_other": "Dodatkowe informacje",
   "signup_field_date_placeholder": "dd/mm/rrrr",
   "signup_field_date_calendar": "Wybierz datę",
   "signup_field_legalform": "Typ konta",
   "signup_field_country": "Kraj",
   "signup_field_language": "Język",
+  "signup_field_managerLanguage": "Język Panelu klienta",
   "signup_field_firstname": "Imię",
   "signup_field_name": "Nazwisko",
   "signup_field_email": "Adres e-mail",
@@ -23,6 +26,7 @@
   "signup_field_companyNationalIdentificationNumber": "Numer identyfikacji podatkowej firmy",
   "signup_field_sex": "Płeć",
   "signup_field_vat": "VAT UE",
+  "signup_field_gst": "Numer identyfikacyjny podatku od towarów i usług (GST)",
   "signup_field_address": "Adres",
   "signup_field_area": "Region",
   "signup_field_state": "Status",
@@ -39,6 +43,8 @@
   "signup_field_timezone": "Strefa czasowa",
   "signup_field_customerCode": "Kod klienta",
   "signup_field_italianSDI": "Numer SDI",
+  "signup_field_required_error": "Wypełnij to pole.",
+  "signup_field_pattern_error": "Użyj poprawnego formatu.",
   "signup_enum_legalform_association": "Stowarzyszenie",
   "signup_enum_legalform_corporation": "Firma",
   "signup_enum_legalform_personalcorporation": "Spółka jednoosobowa",
@@ -77,6 +83,14 @@
   "signup_enum_language_lt_LT": "Litewski",
   "signup_enum_language_nl_NL": "Holenderski",
   "signup_enum_language_pt_PT": "Portugalski",
+  "signup_enum_managerLanguage_de_DE": "Niemiecki",
+  "signup_enum_managerLanguage_en_GB": "Angielski",
+  "signup_enum_managerLanguage_es_ES": "Hiszpański",
+  "signup_enum_managerLanguage_fr_FR": "Francuski",
+  "signup_enum_managerLanguage_fr_CA": "Francuski (kanadyjski)",
+  "signup_enum_managerLanguage_pl_PL": "Polski",
+  "signup_enum_managerLanguage_it_IT": "Włoski",
+  "signup_enum_managerLanguage_pt_PT": "Portugalski",
   "signup_enum_ovhSubsidiary_ASIA": "Azja",
   "signup_enum_ovhSubsidiary_AU": "Australia",
   "signup_enum_ovhSubsidiary_CA": "Kanada",
@@ -709,8 +723,6 @@
   "signup_enum_IT_area_BT": "Barletta-Andria-Trani (Apulia)",
   "signup_enum_IT_area_FM": "Fermo (Marche)",
   "signup_enum_IT_area_MB": "Monza E Brianza (Lombardia)",
-  "signup_field_managerLanguage": "Język Panelu klienta",
-  "signup_field_gst": "Numer identyfikacyjny podatku od towarów i usług (GST)",
   "signup_enum_IN_area_IN-AN": "Andamany i Nikobary ",
   "signup_enum_IN_area_IN-AP": "Andhra Pradesh",
   "signup_enum_IN_area_IN-AR": "Arunachal Pradesh",
@@ -746,18 +758,5 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "Bengal Zachodni ",
-  "signup_section_identification": "Twój identyfikator klienta",
-  "signup_section_activity": "Twoja działalność",
-  "signup_section_language": "Konfiguracja Panelu klienta",
-  "signup_field_required_error": "Wypełnij to pole.",
-  "signup_field_pattern_error": "Użyj poprawnego formatu.",
-  "signup_enum_managerLanguage_de_DE": "Niemiecki",
-  "signup_enum_managerLanguage_en_GB": "Angielski",
-  "signup_enum_managerLanguage_es_ES": "Hiszpański",
-  "signup_enum_managerLanguage_fr_FR": "Francuski",
-  "signup_enum_managerLanguage_fr_CA": "Francuski (kanadyjski)",
-  "signup_enum_managerLanguage_pl_PL": "Polski",
-  "signup_enum_managerLanguage_it_IT": "Włoski",
-  "signup_enum_managerLanguage_pt_PT": "Portugalski"
+  "signup_enum_IN_area_IN-WB": "Bengal Zachodni "
 }
