--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_en_GB.json
@@ -4,15 +4,18 @@
   "signup_not_mandatory_field": "(optional)",
   "signup_email_in_use": "An OVHcloud customer account already exists for this email address. ",
   "signup_password_invalid": "Must contain at least one number, one upper-case letter, and one lower-case letter. Must contain 8 characters or more.",
-  "signup_section_account": "Your account",
+  "signup_section_identification": "Your customer ID",
+  "signup_section_activity": "Your activity",
   "signup_section_personal": "Your personal details",
   "signup_section_contact": "Your contact details",
+  "signup_section_language": "OVHcloud Control Panel configuration",
   "signup_section_other": "Additional information",
   "signup_field_date_placeholder": "dd/mm/yyyy",
   "signup_field_date_calendar": "Choose date",
   "signup_field_legalform": "Account type",
   "signup_field_country": "Country",
   "signup_field_language": "Language",
+  "signup_field_managerLanguage": "OVHcloud Control Panel language",
   "signup_field_firstname": "First name",
   "signup_field_name": "Name",
   "signup_field_email": "Email address",
@@ -23,6 +26,7 @@
   "signup_field_companyNationalIdentificationNumber": "Company tax identification number",
   "signup_field_sex": "Gender",
   "signup_field_vat": "Intra-Community VAT number",
+  "signup_field_gst": "Goods and Services Tax number (GST)",
   "signup_field_address": "Address",
   "signup_field_area": "Region",
   "signup_field_state": "Status",
@@ -39,6 +43,8 @@
   "signup_field_timezone": "Time zone",
   "signup_field_customerCode": "Customer code",
   "signup_field_italianSDI": "SDI Number",
+  "signup_field_required_error": "Please fill in this field.",
+  "signup_field_pattern_error": "Please enter a valid format.",
   "signup_enum_legalform_association": "Non-profit",
   "signup_enum_legalform_corporation": "Company",
   "signup_enum_legalform_personalcorporation": "Ditta individuale",
@@ -77,6 +83,14 @@
   "signup_enum_language_lt_LT": "Lithuanian",
   "signup_enum_language_nl_NL": "Dutch",
   "signup_enum_language_pt_PT": "Portuguese",
+  "signup_enum_managerLanguage_de_DE": "German",
+  "signup_enum_managerLanguage_en_GB": "English",
+  "signup_enum_managerLanguage_es_ES": "Spanish",
+  "signup_enum_managerLanguage_fr_FR": "French",
+  "signup_enum_managerLanguage_fr_CA": "French (Canadian) ",
+  "signup_enum_managerLanguage_pl_PL": "Polish",
+  "signup_enum_managerLanguage_it_IT": "Italian",
+  "signup_enum_managerLanguage_pt_PT": "Portuguese",
   "signup_enum_ovhSubsidiary_ASIA": "Asia",
   "signup_enum_ovhSubsidiary_AU": "Australia",
   "signup_enum_ovhSubsidiary_CA": "Canada",
@@ -709,8 +723,6 @@
   "signup_enum_IT_area_BT": "Barletta-Andria-Trani (Puglia)",
   "signup_enum_IT_area_FM": "Fermo (Marche)",
   "signup_enum_IT_area_MB": "Monza E Brianza (Lombardy)",
-  "signup_field_managerLanguage": "OVHcloud Control Panel language",
-  "signup_field_gst": "Goods and Services Tax number (GST)",
   "signup_enum_IN_area_IN-AN": "Andaman and Nicobar Islands",
   "signup_enum_IN_area_IN-AP": "Andhra Pradesh",
   "signup_enum_IN_area_IN-AR": "Arunachal Pradesh",
@@ -746,18 +758,5 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "West Bengal",
-  "signup_section_identification": "Your customer ID",
-  "signup_section_activity": "Your activity",
-  "signup_section_language": "OVHcloud Control Panel configuration",
-  "signup_field_required_error": "Please fill in this field.",
-  "signup_field_pattern_error": "Please enter a valid format.",
-  "signup_enum_managerLanguage_de_DE": "German",
-  "signup_enum_managerLanguage_en_GB": "English",
-  "signup_enum_managerLanguage_es_ES": "Spanish",
-  "signup_enum_managerLanguage_fr_FR": "French",
-  "signup_enum_managerLanguage_fr_CA": "French (Canadian) ",
-  "signup_enum_managerLanguage_pl_PL": "Polish",
-  "signup_enum_managerLanguage_it_IT": "Italian",
-  "signup_enum_managerLanguage_pt_PT": "Portuguese"
+  "signup_enum_IN_area_IN-WB": "West Bengal"
 }
