--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_es_ES.json
@@ -4,15 +4,18 @@
   "signup_not_mandatory_field": "(opcional)",
   "signup_email_in_use": "Ya existe una cuenta de cliente de OVHcloud para esta dirección de correo.",
   "signup_password_invalid": "debe contener al menos una cifra, una letra mayúscula y una minúscula, y tener 8 caracteres o más.",
-  "signup_section_account": "Su cuenta",
+  "signup_section_identification": "Su identificación de cliente",
+  "signup_section_activity": "Actividad",
   "signup_section_personal": "Datos personales",
   "signup_section_contact": "Datos de contacto",
+  "signup_section_language": "Configuración de su área de cliente",
   "signup_section_other": "Información adicional",
   "signup_field_date_placeholder": "dd/mm/aaaa",
   "signup_field_date_calendar": "Elegir la fecha",
   "signup_field_legalform": "Tipo de cuenta",
   "signup_field_country": "País",
   "signup_field_language": "Idioma",
+  "signup_field_managerLanguage": "Idioma del área de cliente",
   "signup_field_firstname": "Nombre",
   "signup_field_name": "Nombre",
   "signup_field_email": "Correo electrónico",
@@ -23,6 +26,7 @@
   "signup_field_companyNationalIdentificationNumber": "NIF de empresa",
   "signup_field_sex": "Género",
   "signup_field_vat": "N.º de IVA intracomunitario",
+  "signup_field_gst": "Número de impuesto sobre bienes y servicios (GST)",
   "signup_field_address": "Dirección",
   "signup_field_area": "Región",
   "signup_field_state": "Estado",
@@ -39,6 +43,8 @@
   "signup_field_timezone": "Zona horaria",
   "signup_field_customerCode": "Número de cliente",
   "signup_field_italianSDI": "Número SDI",
+  "signup_field_required_error": "Complete este campo.",
+  "signup_field_pattern_error": "Introduzca un formato válido.",
   "signup_enum_legalform_association": "Asociación",
   "signup_enum_legalform_corporation": "Empresa",
   "signup_enum_legalform_personalcorporation": "Empresa individual",
@@ -77,6 +83,14 @@
   "signup_enum_language_lt_LT": "Lituano",
   "signup_enum_language_nl_NL": "Holandés",
   "signup_enum_language_pt_PT": "Portugués",
+  "signup_enum_managerLanguage_de_DE": "Alemán",
+  "signup_enum_managerLanguage_en_GB": "Inglés",
+  "signup_enum_managerLanguage_es_ES": "Español",
+  "signup_enum_managerLanguage_fr_FR": "Francés",
+  "signup_enum_managerLanguage_fr_CA": "Francés (Canadá)",
+  "signup_enum_managerLanguage_pl_PL": "Polaco",
+  "signup_enum_managerLanguage_it_IT": "Italiano",
+  "signup_enum_managerLanguage_pt_PT": "Portugués",
   "signup_enum_ovhSubsidiary_ASIA": "Asia",
   "signup_enum_ovhSubsidiary_AU": "Australia",
   "signup_enum_ovhSubsidiary_CA": "Canadá",
@@ -709,8 +723,6 @@
   "signup_enum_IT_area_BT": "Barletta-Andria-Trani (Apulia)",
   "signup_enum_IT_area_FM": "Fermo (Marche)",
   "signup_enum_IT_area_MB": "Monza E Brianza (Lombardía)",
-  "signup_field_managerLanguage": "Idioma del área de cliente",
-  "signup_field_gst": "Número de impuesto sobre bienes y servicios (GST)",
   "signup_enum_IN_area_IN-AN": "Islas Andamán y Nicobar",
   "signup_enum_IN_area_IN-AP": "Andhra Pradesh",
   "signup_enum_IN_area_IN-AR": "Arunachal Pradesh",
@@ -746,18 +758,5 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "West Bengal",
-  "signup_section_identification": "Su identificación de cliente",
-  "signup_section_activity": "Actividad",
-  "signup_section_language": "Configuración de su área de cliente",
-  "signup_field_required_error": "Complete este campo.",
-  "signup_field_pattern_error": "Introduzca un formato válido.",
-  "signup_enum_managerLanguage_de_DE": "Alemán",
-  "signup_enum_managerLanguage_en_GB": "Inglés",
-  "signup_enum_managerLanguage_es_ES": "Español",
-  "signup_enum_managerLanguage_fr_FR": "Francés",
-  "signup_enum_managerLanguage_fr_CA": "Francés (Canadá)",
-  "signup_enum_managerLanguage_pl_PL": "Polaco",
-  "signup_enum_managerLanguage_it_IT": "Italiano",
-  "signup_enum_managerLanguage_pt_PT": "Portugués"
+  "signup_enum_IN_area_IN-WB": "West Bengal"
 }
