--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pt_PT.json
@@ -4,15 +4,18 @@
   "signup_not_mandatory_field": "(opcional)",
   "signup_email_in_use": "Já existe uma conta de cliente OVHcloud para este endereço de e-mail.",
   "signup_password_invalid": "Deve ter pelo menos um número, uma maiúscula e uma minúscula. E ter 8 ou mais caracteres.",
-  "signup_section_account": "A sua conta",
+  "signup_section_identification": "ID de cliente",
+  "signup_section_activity": "A sua atividade",
   "signup_section_personal": "Informações pessoais",
   "signup_section_contact": "Informações de contacto",
+  "signup_section_language": "Configuração da Área de Cliente",
   "signup_section_other": "Informações complementares",
   "signup_field_date_placeholder": "dd/mm/aaaa",
   "signup_field_date_calendar": "Escolher a data",
   "signup_field_legalform": "Tipo de conta",
   "signup_field_country": "País",
   "signup_field_language": "Idioma",
+  "signup_field_managerLanguage": "Idioma da Área de Cliente",
   "signup_field_firstname": "Nome",
   "signup_field_name": "Nome",
   "signup_field_email": "E-mail",
@@ -23,6 +26,7 @@
   "signup_field_companyNationalIdentificationNumber": "Número de identificação fiscal da empresa",
   "signup_field_sex": "Género",
   "signup_field_vat": "NIF intracomunitário",
+  "signup_field_gst": "Número do imposto sobre os produtos e serviços (GST)",
   "signup_field_address": "Morada",
   "signup_field_area": "Região",
   "signup_field_state": "Estado",
@@ -39,6 +43,8 @@
   "signup_field_timezone": "Fuso horário",
   "signup_field_customerCode": "Código cliente",
   "signup_field_italianSDI": "Número SDI",
+  "signup_field_required_error": "Preencha o campo.",
+  "signup_field_pattern_error": "Introduza um formato válido.",
   "signup_enum_legalform_association": "Associação",
   "signup_enum_legalform_corporation": "Empresa",
   "signup_enum_legalform_personalcorporation": "Empresa individual",
@@ -77,6 +83,14 @@
   "signup_enum_language_lt_LT": "Lituano ",
   "signup_enum_language_nl_NL": "Holandês",
   "signup_enum_language_pt_PT": "Português",
+  "signup_enum_managerLanguage_de_DE": "Alemão",
+  "signup_enum_managerLanguage_en_GB": "Inglês",
+  "signup_enum_managerLanguage_es_ES": "Espanhol",
+  "signup_enum_managerLanguage_fr_FR": "Francês",
+  "signup_enum_managerLanguage_fr_CA": "Francês (Canadá)",
+  "signup_enum_managerLanguage_pl_PL": "Polaco",
+  "signup_enum_managerLanguage_it_IT": "Italiano ",
+  "signup_enum_managerLanguage_pt_PT": "Português",
   "signup_enum_ovhSubsidiary_ASIA": "Ásia ",
   "signup_enum_ovhSubsidiary_AU": "Austrália",
   "signup_enum_ovhSubsidiary_CA": "Canadá",
@@ -709,8 +723,6 @@
   "signup_enum_IT_area_BT": "Barletta-Andria-Trani (Puglia)",
   "signup_enum_IT_area_FM": "Fermo (Marche)",
   "signup_enum_IT_area_MB": "Monza E Brianza (Lombardia)",
-  "signup_field_managerLanguage": "Idioma da Área de Cliente",
-  "signup_field_gst": "Número do imposto sobre os produtos e serviços (GST)",
   "signup_enum_IN_area_IN-AN": "Ilhas de Andamã e Nicobar",
   "signup_enum_IN_area_IN-AP": "Andhra Pradesh",
   "signup_enum_IN_area_IN-AR": "Arunachal Pradesh",
@@ -746,18 +758,5 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "West Bengal",
-  "signup_section_identification": "ID de cliente",
-  "signup_section_activity": "A sua atividade",
-  "signup_section_language": "Configuração da Área de Cliente",
-  "signup_field_required_error": "Preencha o campo.",
-  "signup_field_pattern_error": "Introduza um formato válido.",
-  "signup_enum_managerLanguage_de_DE": "Alemão",
-  "signup_enum_managerLanguage_en_GB": "Inglês",
-  "signup_enum_managerLanguage_es_ES": "Espanhol",
-  "signup_enum_managerLanguage_fr_FR": "Francês",
-  "signup_enum_managerLanguage_fr_CA": "Francês (Canadá)",
-  "signup_enum_managerLanguage_pl_PL": "Polaco",
-  "signup_enum_managerLanguage_it_IT": "Italiano ",
-  "signup_enum_managerLanguage_pt_PT": "Português"
+  "signup_enum_IN_area_IN-WB": "West Bengal"
 }
