fix(pcc): rename vrops option and remove get start link
ref: MANAGER-10171

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_fr_FR.json
@@ -1,6 +1,4 @@
 {
   "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "VMware Network Virtualization (NSX)",
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_vrops": "VMware vRealize Operations (vROps)",
-
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_presentation": "Découvrir"
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_vrops": "vRealize Operations (vROps)"
 }
