--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_en_GB.json
@@ -13,5 +13,6 @@
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_description_label": "User description:",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_credential_banner_secret_key_field_label": "Your S3 secret key:",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_success": "S3 credentials for user {{userName}} have been generated.",
-  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_fail": "S3 credentials not generated."
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_fail": "S3 credentials not generated.",
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select": "Select an existing user"
 }
