--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_es_ES.json
@@ -13,5 +13,6 @@
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_description_label": "Descripción del usuario:",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_credential_banner_secret_key_field_label": "Su clave secreta S3:",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_success": "Se han generado las claves de conexión S3 del usuario {{userName}}.",
-  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_fail": "No se han generado las claves de conexión S3."
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_fail": "No se han generado las claves de conexión S3.",
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select": "Seleccionar un usuario existente"
 }
