--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_it_IT.json
@@ -13,5 +13,6 @@
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_description_label": "Descrizione dell'utente:",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_credential_banner_secret_key_field_label": "La tua chiave segreta S3:",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_success": "Gli identificativi S3 per l'utente {{userName}} sono stati generati.",
-  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_fail": "Gli identificativi S3 non sono stati generati."
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_fail": "Gli identificativi S3 non sono stati generati.",
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select": "Seleziona un utente esistente"
 }
