--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_pl_PL.json
@@ -13,5 +13,6 @@
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_description_label": "Opis użytkownika:",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_credential_banner_secret_key_field_label": "Tajny klucz S3:",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_success": "Dane identyfikacyjne S3 dla użytkownika {{userName}} zostały wygenerowane.",
-  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_fail": "Dane identyfikacyjne S3 nie zostały wygenerowane."
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_fail": "Dane identyfikacyjne S3 nie zostały wygenerowane.",
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select": "Wybierz istniejącego użytkownika"
 }
