--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/translations/Messages_pt_PT.json
@@ -13,5 +13,6 @@
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_description_label": "Descrição do utilizador:",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_credential_banner_secret_key_field_label": "A sua chave secreta S3:",
   "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_success": "As informações de identificação S3 para o utilizador {{userName}} foram geradas.",
-  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_fail": "As informações de identificação S3 não foram geradas."
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_request_fail": "As informações de identificação S3 não foram geradas.",
+  "pci_projects_project_storages_cold_archive_add_step_link_user_archive_mode_select": "Selecionar um utilizador existente"
 }
