--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_en_GB.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_en_GB.json
@@ -128,5 +128,6 @@
   "sidebar_tag_new": "New",
   "sidebar_domain_operations": "Ongoing operations ",
   "sidebar_pci_additional_ips": "Public IPs",
-  "sidebar_pci_public_gateways": "Gateway"
+  "sidebar_pci_public_gateways": "Gateway",
+  "sidebar_pci_cold_archive": "Cold Archive"
 }
