--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_es_ES.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_es_ES.json
@@ -128,5 +128,6 @@
   "sidebar_tag_new": "Novedad",
   "sidebar_domain_operations": "Operaciones en curso",
   "sidebar_pci_additional_ips": "IP públicas",
-  "sidebar_pci_public_gateways": "Gateway"
+  "sidebar_pci_public_gateways": "Gateway",
+  "sidebar_pci_cold_archive": "Cold Archive"
 }
