--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_it_IT.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_it_IT.json
@@ -128,5 +128,6 @@
   "sidebar_tag_new": "Nuovo",
   "sidebar_domain_operations": "Operazioni in corso",
   "sidebar_pci_additional_ips": "IP pubblici",
-  "sidebar_pci_public_gateways": "Gateway"
+  "sidebar_pci_public_gateways": "Gateway",
+  "sidebar_pci_cold_archive": "Cold Archive"
 }
