--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pl_PL.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pl_PL.json
@@ -128,5 +128,6 @@
   "sidebar_tag_new": "Nowość",
   "sidebar_domain_operations": "Operacje w toku",
   "sidebar_pci_additional_ips": "Publiczne adresy IP",
-  "sidebar_pci_public_gateways": "Gateway"
+  "sidebar_pci_public_gateways": "Gateway",
+  "sidebar_pci_cold_archive": "Cold Archive"
 }
