--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
@@ -128,5 +128,6 @@
   "sidebar_tag_new": "Novo",
   "sidebar_domain_operations": "Operações em curso",
   "sidebar_pci_additional_ips": "IP públicos",
-  "sidebar_pci_public_gateways": "Gateway"
+  "sidebar_pci_public_gateways": "Gateway",
+  "sidebar_pci_cold_archive": "Cold Archive"
 }
