fix(pcc): change logo and guides on onboarding page vmware
ref: DTRSD-101639

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_fr_FR.json
@@ -1,19 +1,20 @@
 {
-  "dedicated_clouds_onboarding_title": "Votre plateforme de virtualisation VMware dans le Cloud",
-  "dedicated_clouds_onboarding_description": "Vous avez besoin de davantage de ressources pour développer votre activité ? Vous manipulez des données sensibles nécessitant sécurité, confidentialité ainsi qu'une infrastructure dédiée ?",
-  "dedicated_clouds_onboarding_description2": "Avec Hosted Private Cloud, nous vous proposons une infrastructure privée, hébergée et gérée par nos équipes, offrant un taux de disponibilité global de 99,9% qui vous permet de vous concentrer sur votre cœur de métier.",
-  "dedicated_clouds_onboarding_description3": "Parfaite combinaison du matériel Intel de dernière génération et de la technologie VMware, nos offres fournissent des environnements totalement isolés et dédiés afin de sécuriser vos charges de travail les plus critiques.",
+  "dedicated_clouds_onboarding_title": "Notre solution de virtualisation managée",
+  "dedicated_clouds_onboarding_description": "Nous avons conçu une plate-forme similaire à votre expérience \"On-Prem\", y compris vSphere, vCenter et vROps.",
+  "dedicated_clouds_onboarding_description2": "Avec une infrastructure de cloud privé OVHcloud, vous bénéficiez d'un service cloud, de notre capacité d'innovation et vous réduisez vos coûts et votre impact environnemental.",
+  "dedicated_clouds_onboarding_description3": "Nous gérons la maintenance de votre infrastructure tant hardware que software.",
+  "dedicated_clouds_onboarding_description4": "Vous bénéficiez également de services cloud hautes performances, avec des options telles que NSX, vSAN et Veeam Backup (pour vos sauvegardes) — et Zerto (pour votre plan de reprise d'activité).",
   "dedicated_clouds_onboarding_order": "Commander",
-  "dedicated_clouds_onboarding_guide1_title": "Déploiement d’une machine virtuelle",
-  "dedicated_clouds_onboarding_guide1_description": "Découvrez comment déployer une machine virtuelle depuis l'interface vSphere",
-  "dedicated_clouds_onboarding_guide2_title": "Se connecter à l’interface vSphere",
-  "dedicated_clouds_onboarding_guide2_description": "Découvrez les différentes façons de se connecter à vSphere",
-  "dedicated_clouds_onboarding_guide3_title": "Se connecter en SFTP",
-  "dedicated_clouds_onboarding_guide3_description": "Apprenez à vous connecter à votre Private Cloud en SFTP",
-  "dedicated_clouds_onboarding_us_guide1_title": "Deploying a virtual machine",
-  "dedicated_clouds_onboarding_us_guide1_description": "Find out how to deploy a virtual machine in the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_title": "Logging in to the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_description": "Find out about the different ways you can log in to vSphere",
-  "dedicated_clouds_onboarding_us_guide3_title": "Logging in via SFTP",
-  "dedicated_clouds_onboarding_us_guide3_description": "Find out how to log in to your Private Cloud via SFTP"
+  "dedicated_clouds_onboarding_guide1_title": "Présentation de l’espace client OVHcloud",
+  "dedicated_clouds_onboarding_guide1_description": "Découvrez les possibilités de votre espace client VMware",
+  "dedicated_clouds_onboarding_guide2_title": "Présentation de Tanzu Kubernetes Grid",
+  "dedicated_clouds_onboarding_guide2_description": "Découvrez la solution Tanzu Kubernetes Grid et ses possiblités d'intégration dans VMware on OVHcloud",
+  "dedicated_clouds_onboarding_guide3_title": "Configurer une IP sur une machine virtuelle",
+  "dedicated_clouds_onboarding_guide3_description": "Après avoir créé une machine virtuelle, vous pouvez lui attribuer une IP publique ou privée",
+  "dedicated_clouds_onboarding_us_guide1_title": "How to Access the NSX Interface",
+  "dedicated_clouds_onboarding_us_guide1_description": "NSX is a Software Defined Network (SDN) solution developed by VMware that is activated from the vCenter and managed directly from the vSphere interface. With NSX, you can configure rules to access your networks, create your security policy, and quickly deploy the various network services needed to build your infrastructure. This article provides an introduction to the NSX interface.",
+  "dedicated_clouds_onboarding_us_guide2_title": "How to Modify the vCenter Access Policy",
+  "dedicated_clouds_onboarding_us_guide2_description": "To enhance security for your Managed Bare Metal infrastructure, you can restrict and manage the access to vCenter. In this article, we will go over how to change the access policy for vCenter in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_us_guide3_title": "How to Authorize IP Addresses for vCenter Access",
+  "dedicated_clouds_onboarding_us_guide3_description": "Access to your vCenter environment can be restricted by allowing only certain IP addresses or ranges to connect to it. In this article, we will cover how to authorize IP addresses for vCenter access in the OVHcloud Manager."
 }
