fix(i18n): add missing translations [CDS 2083]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/sms/src/sms/dashboard/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/sms/src/sms/dashboard/translations/Messages_fr_CA.json
@@ -2,12 +2,14 @@
   "sms_actions": "Je veux…",
   "sms_actions_send_sms": "Envoyer un SMS",
   "sms_actions_credit_account": "Créditer mon compte",
+  "sms_actions_credit_transfer": "Transférer des crédits",
   "sms_actions_create_contact": "Créer un contact",
   "sms_actions_create_sender": "Créer un expéditeur",
   "sms_actions_create_api_user": "Créer un utilisateur API",
   "sms_actions_clean_contact_list": "Nettoyer la liste des contacts",
   "sms_actions_create_campaign": "Créer une campagne",
   "sms_actions_campaign_history": "Historique des campagnes",
+  "sms_actions_smpp_parameter": "Paramétrer mon SMPP",
   "sms_consumed_credit_balance": "Solde de crédit",
   "sms_consumed_last_recharge": "Dernière recharge",
   "sms_statistics": "Statistiques",
