--- a/packages/manager/modules/sms/src/sms/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/sms/src/sms/translations/Messages_fr_CA.json
@@ -1,5 +1,9 @@
 {
   "sms_page_title": "SMS \"{{name}}\"",
+  "sms_header_guide": "Guides",
+  "sms_header_guide_start_with_sms": "Débuter avec les SMS OVHcloud",
+  "sms_smpp_channel_qualification_marketing": "Marketing",
+  "sms_smpp_channel_qualification_transactional": "Transactionnel",
   "sms_tabs_dashboard": "Tableau de bord",
   "sms_tabs_messages_campaign": "Message et campagne",
   "sms_sublink_sms_compose": "Gestion des SMS",
