--- a/packages/manager/modules/sms/src/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/sms/src/translations/Messages_fr_CA.json
@@ -3,8 +3,14 @@
   "sms_order": "Commander",
   "sms_name_label": "Nom",
   "sms_description_label": "Description",
+  "sms_channel_label": "Format de compte",
+  "sms_channel_both": "Standard",
+  "sms_channel_marketing": "SMPP marketing",
+  "sms_channel_transactional": "SMPP transactionnel",
   "sms_status_label": "Statut",
   "sms_status_label_enable": "OK",
   "sms_status_label_disable": "Désactivé",
-  "sms_view_sms_label": "Détails"
+  "sms_view_sms_label": "Détails",
+  "sms_header_guide": "Guides",
+  "sms_header_guide_start_with_sms": "Débuter avec les SMS OVHcloud"
 }
